tests/success/circular_comptime_dependency.bz
function test()
{
	(consteval {
		test1();
		test3();
	});
}

function test1()
{
	test2();
}

function test2()
{
}

function test3()
{
	(consteval test1());
}
