tests/error/call_dynamic_expression.bz
function test()
{
	(consteval {
		({ __builtin_comptime_malloc_type(int32, 1); test1 })();
	});
}

function test1()
{
}
